--- a/iLabHIS/resources/pages/dashboard.html
+++ b/iLabHIS/resources/pages/dashboard.html
@@ -90,7 +90,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="#" class="nav-link active">
+            <a href="dashboard.html" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
@@ -98,20 +98,20 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+            <a href="patients.html" class="nav-link">
+              <i class="nav-icon fas fa-user"></i>
               <p>Patients</p>
             </a>
           </li>
           <li class="nav-item mb-auto">
-            <a href="" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+            <a href="lab-requests.html" class="nav-link">
+              <i class="nav-icon fas fa-microscope"></i>
               <p>Lab Test Requests</p>
             </a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <i class="nav-icon fas fa-gear"></i>
               <p>Settings</p>
             </a>
           </li>
