Updates as of 11/26/2019

--- a/iLabHIS/index.html
+++ b/iLabHIS/index.html
@@ -19,12 +19,14 @@
   <link rel="stylesheet" href="resources/dist/css/styles.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="resources/dist/img/iLabHIS-logo.png" type="image/ico" sizes="16x16">
 </head>
   <body class="hold-transition">
   <div class="row mx-0" id="login-page">
     <div class="login-box col-md-4 offset-md-8 px-5">
       <div class="login-logo">
-        <img src="resources/dist/img/ilabhis-logo.png" alt="" width="20%">
+        <img src="resources/dist/img/iLabHIS-logo.png" alt="" width="20%">
         <a href="#"><b>iLab</b>HIS</a>
       </div>
       <!-- /.login-logo -->
