--- a/iLabHIS/resources/pages/dashboard.html
+++ b/iLabHIS/resources/pages/dashboard.html
@@ -111,12 +111,6 @@
               <p>Lab Test Requests</p>
             </a>
           </li>
-          <li class="nav-item">
-            <a href="settings.html" class="nav-link">
-              <i class="nav-icon fas fa-cogs"></i>
-              <p>Settings</p>
-            </a>
-          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
@@ -292,7 +286,7 @@
             </div>
             <!-- /.card-body -->
             <div class="card-footer clearfix">
-              <button type="button" class="btn btn-info float-right"><i class="fas fa-plus"></i> Add item</button>
+              <button type="button" class="btn btn-primary float-right"><i class="fas fa-plus"></i> Add item</button>
             </div>
           </div>
           <!-- /.card -->
