Last batch of changes

--- a/iLabHIS/resources/pages/lab-requests.html
+++ b/iLabHIS/resources/pages/lab-requests.html
@@ -83,10 +83,10 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="../dist/img/user1-128x128.png" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Neufranco Nino Zamoras</a>
+          <a href="#" class="d-block">BSMT-1C</a>
         </div>
       </div>
 
@@ -271,6 +271,112 @@
                       <i class="fas fa-trash"></i>
                     </div>
                   </li>
+                  <li>
+                      <!-- drag handle -->
+                      <span class="handle">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </span>
+                      <!-- checkbox -->
+                      <div  class="icheck-primary d-inline ml-2">
+                        <input type="checkbox" value="" name="todo1" id="todoCheck1">
+                        <label for="todoCheck1"></label>
+                      </div>
+                      <!-- todo text -->
+                      <span class="text">[OR12345] Complete Blood Count (CBC) | Patient: Mr. Rowdrigow Dutwerte</span>
+                      <!-- Emphasis label -->
+                      <small class="badge badge-danger"><i class="far fa-clock"></i> 2 mins</small>
+                      <!-- General tools such as edit or delete-->
+                      <div class="tools">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash"></i>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="handle">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </span>
+                      <div  class="icheck-primary d-inline ml-2">
+                        <input type="checkbox" value="" name="todo2" id="todoCheck2" checked>
+                        <label for="todoCheck2"></label>
+                      </div>
+                      <span class="text">[OR09876] Urinalysis | Patient: Mr. Bwong Gow</span>
+                      <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                      <div class="tools">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash"></i>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="handle">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </span>
+                      <div  class="icheck-primary d-inline ml-2">
+                        <input type="checkbox" value="" name="todo3" id="todoCheck3">
+                        <label for="todoCheck3"></label>
+                      </div>
+                      <span class="text">[OR45678] RAPID Test | Patient: Ms. Leniling Aborido</span>
+                      <small class="badge badge-warning"><i class="far fa-clock"></i> 1 day</small>
+                      <div class="tools">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash"></i>
+                      </div>
+                    </li>
+                    <li>
+                      <!-- drag handle -->
+                      <span class="handle">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </span>
+                      <!-- checkbox -->
+                      <div  class="icheck-primary d-inline ml-2">
+                        <input type="checkbox" value="" name="todo4" id="todoCheck4">
+                        <label for="todoCheck4"></label>
+                      </div>
+                      <!-- todo text -->
+                      <span class="text">[OR456159] Fasting Blood Sugar (FBS) | Patient: Mr. Rowdrigow Dutwerte</span>
+                      <!-- Emphasis label -->
+                      <small class="badge badge-danger"><i class="far fa-clock"></i> 2 mins</small>
+                      <!-- General tools such as edit or delete-->
+                      <div class="tools">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash"></i>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="handle">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </span>
+                      <div  class="icheck-primary d-inline ml-2">
+                        <input type="checkbox" value="" name="todo2" id="todoCheck5" checked>
+                        <label for="todoCheck5"></label>
+                      </div>
+                      <span class="text">[OR321951] Creatinine Blood Test | Patient: Mr. Bwong Gow</span>
+                      <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                      <div class="tools">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash"></i>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="handle">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </span>
+                      <div  class="icheck-primary d-inline ml-2">
+                        <input type="checkbox" value="" name="todo3" id="todoCheck6">
+                        <label for="todoCheck6"></label>
+                      </div>
+                      <span class="text">[OR258753] RAPID Test | Patient: Ms. Leniling Aborido</span>
+                      <small class="badge badge-warning"><i class="far fa-clock"></i> 1 day</small>
+                      <div class="tools">
+                        <i class="fas fa-edit"></i>
+                        <i class="fas fa-trash"></i>
+                      </div>
+                    </li>
                 </ul>
               </div>
               <!-- /.card-body -->
@@ -328,6 +434,46 @@
                 <!-- /.card-header -->
               <div class="card-body" id="lab-request-list">
                 <ul class="todo-list" data-widget="">
+                  <li>
+                    <span class="text">[OR09876] Urinalysis | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR321951] Creatinine Blood Test | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR09876] Urinalysis | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR321951] Creatinine Blood Test | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR09876] Urinalysis | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR321951] Creatinine Blood Test | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR09876] Urinalysis | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
+                  <li>
+                    <span class="text">[OR321951] Creatinine Blood Test | Patient: Mr. Bwong Gow</span>
+                    <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
+                    <a href="#" data-toggle="modal" data-target="#labresult" class="badge badge-warning"><i class="fas fa-eye pr-2" title="View Test Result"></i>View Lab Result</a>
+                  </li>
                   <li>
                     <span class="text">[OR09876] Urinalysis | Patient: Mr. Bwong Gow</span>
                     <small class="badge badge-info"><i class="far fa-clock"></i> 4 hours</small>
