--- a/iLabHIS/resources/pages/billing.html
+++ b/iLabHIS/resources/pages/billing.html
@@ -85,10 +85,10 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="../dist/img/user1-128x128.png" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Neufranco Nino Zamoras</a>
+          <a href="#" class="d-block">BSMT-1C</a>
         </div>
       </div>
 
@@ -161,7 +161,7 @@
             </h3>
           </div>
           <!-- /.card-header -->
-          <div class="card-body">
+          <div class="card-body" style="height: 70vh; overflow-y: auto;">
             <div class="table-responsive">
               <table class="table table-striped table-bordered">
                 <thead>
@@ -173,7 +173,7 @@
                   <th width="">Address</th>
                   <th width="10%">Action</th>
                 </thead>
-                <tbody style="height: 50vh; overflow-y: auto;">
+                <tbody >
                   <tr>
                     <td><input type="checkbox" name="" id=""></td>
                     <td>12345</td>
@@ -251,6 +251,237 @@
                       <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
                     </td>
                   </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>12345</td>
+                    <td>Gatoc</td>
+                    <td>Analyn</td>
+                    <td>A</td>
+                    <td>Brgy. Magnangoy, Hilongos, Leyte</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>23456</td>
+                    <td>Corporal</td>
+                    <td>Max Jesus</td>
+                    <td>S</td>
+                    <td>Kalentong, Daang Bakal, Mandaluyong City</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>34567</td>
+                    <td>Arcilla</td>
+                    <td>Heather Neiva</td>
+                    <td>Y</td>
+                    <td>Luna Street, Binondo, Manila</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>45678</td>
+                    <td>Rendón</td>
+                    <td>Callie Cynthia</td>
+                    <td>M</td>
+                    <td>Shaw Bouleverd, Mandaluyong City</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>56789</td>
+                    <td>Isidro</td>
+                    <td>Gideon Alfonso</td>
+                    <td>P</td>
+                    <td>Regina Building, Escolta, Binondo, Manila</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>67891</td>
+                    <td>Cereza</td>
+                    <td>Braxton Jefferson</td>
+                    <td>A</td>
+                    <td>Brgy. Magnangoy, Hilongos, Leyte</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="checkbox" name="" id=""></td>
+                    <td>78910</td>
+                    <td>Mendoza</td>
+                    <td>Jade Xaviera</td>
+                    <td>M</td>
+                    <td>Shaw Boulevard, Mandaluyong City</td>
+                    <td class="text-center">
+                      <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                    </td>
+                  </tr>
+                  <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>12345</td>
+                      <td>Gatoc</td>
+                      <td>Analyn</td>
+                      <td>A</td>
+                      <td>Brgy. Magnangoy, Hilongos, Leyte</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>23456</td>
+                      <td>Corporal</td>
+                      <td>Max Jesus</td>
+                      <td>S</td>
+                      <td>Kalentong, Daang Bakal, Mandaluyong City</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>34567</td>
+                      <td>Arcilla</td>
+                      <td>Heather Neiva</td>
+                      <td>Y</td>
+                      <td>Luna Street, Binondo, Manila</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>45678</td>
+                      <td>Rendón</td>
+                      <td>Callie Cynthia</td>
+                      <td>M</td>
+                      <td>Shaw Bouleverd, Mandaluyong City</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>56789</td>
+                      <td>Isidro</td>
+                      <td>Gideon Alfonso</td>
+                      <td>P</td>
+                      <td>Regina Building, Escolta, Binondo, Manila</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>67891</td>
+                      <td>Cereza</td>
+                      <td>Braxton Jefferson</td>
+                      <td>A</td>
+                      <td>Brgy. Magnangoy, Hilongos, Leyte</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>78910</td>
+                      <td>Mendoza</td>
+                      <td>Jade Xaviera</td>
+                      <td>M</td>
+                      <td>Shaw Boulevard, Mandaluyong City</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>12345</td>
+                      <td>Gatoc</td>
+                      <td>Analyn</td>
+                      <td>A</td>
+                      <td>Brgy. Magnangoy, Hilongos, Leyte</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>23456</td>
+                      <td>Corporal</td>
+                      <td>Max Jesus</td>
+                      <td>S</td>
+                      <td>Kalentong, Daang Bakal, Mandaluyong City</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>34567</td>
+                      <td>Arcilla</td>
+                      <td>Heather Neiva</td>
+                      <td>Y</td>
+                      <td>Luna Street, Binondo, Manila</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>45678</td>
+                      <td>Rendón</td>
+                      <td>Callie Cynthia</td>
+                      <td>M</td>
+                      <td>Shaw Bouleverd, Mandaluyong City</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>56789</td>
+                      <td>Isidro</td>
+                      <td>Gideon Alfonso</td>
+                      <td>P</td>
+                      <td>Regina Building, Escolta, Binondo, Manila</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>67891</td>
+                      <td>Cereza</td>
+                      <td>Braxton Jefferson</td>
+                      <td>A</td>
+                      <td>Brgy. Magnangoy, Hilongos, Leyte</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><input type="checkbox" name="" id=""></td>
+                      <td>78910</td>
+                      <td>Mendoza</td>
+                      <td>Jade Xaviera</td>
+                      <td>M</td>
+                      <td>Shaw Boulevard, Mandaluyong City</td>
+                      <td class="text-center">
+                        <a href="" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#printBill"><i class="fas fa-print text-danger mr-2" title="Print Patient"></i>Print</a>
+                      </td>
+                    </tr>
                 </tbody>
               </table>
             </div>
